katalog/tests/istio-operator/citadel/mtls-at-bar-httpbin-service.yaml
# Copyright (c) 2017-present SIGHUP s.r.l All rights reserved.
# Use of this source code is governed by a BSD-style
# license that can be found in the LICENSE file.

apiVersion: "authentication.istio.io/v1beta1"
kind: "Policy"
metadata:
  name: "httpbin"
  namespace: "bar"
spec:
  targets:
  - name: httpbin
  peers:
  - mtls: {}
